WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
104262
[EFL] Fix build warning in StyleResolver.cpp using gcc 4.7.2
https://bugs.webkit.org/show_bug.cgi?id=104262
Summary
[EFL] Fix build warning in StyleResolver.cpp using gcc 4.7.2
Sujin Park
Reported
2012-12-06 07:05:29 PST
When I compile in Ubuntu 12.10(gcc 4.7.2), I got bellow errors Source/WebCore/CMakeFiles/webcore_efl.dir/css/ViewportStyleResolver.cpp.o In file included from /home/sujin/workspace/WebKit/Source/WebCore/rendering/style/RenderStyle.h:39:0, from /home/sujin/workspace/WebKit/Source/WebCore/css/StyleResolver.h:30, from /home/sujin/workspace/WebKit/Source/WebCore/css/StyleResolver.cpp:30: /home/sujin/workspace/WebKit/Source/WebCore/platform/graphics/FontDescription.h: In static member function ‘static WTF::PassRefPtr<WebCore::RenderStyle> WebCore::StyleResolver::styleForDocument(WebCore::Document*, WebCore::CSSFontSelector*)’: /home/sujin/workspace/WebKit/Source/WebCore/platform/graphics/FontDescription.h:165:112: error: ‘glyphOrientation’ may be used uninitialized in this function [-Werror=maybe-uninitialized] /home/sujin/workspace/WebKit/Source/WebCore/css/StyleResolver.cpp:1508:28: note: ‘glyphOrientation’ was declared here In file included from /home/sujin/workspace/WebKit/Source/WebCore/rendering/style/RenderStyle.h:39:0, from /home/sujin/workspace/WebKit/Source/WebCore/css/StyleResolver.h:30, from /home/sujin/workspace/WebKit/Source/WebCore/css/StyleResolver.cpp:30: /home/sujin/workspace/WebKit/Source/WebCore/platform/graphics/FontDescription.h:164:83: error: ‘fontOrientation’ may be used uninitialized in this function [-Werror=maybe-uninitialized] /home/sujin/workspace/WebKit/Source/WebCore/css/StyleResolver.cpp:1507:21: note: ‘fontOrientation’ was declared here /home/sujin/workspace/WebKit/Source/WebCore/css/StyleResolver.cpp: In member function ‘void WebCore::StyleResolver::_ZN7WebCore13StyleResolver10updateFontEv.part.218()’: /home/sujin/workspace/WebKit/Source/WebCore/css/StyleResolver.cpp:2140:5: error: ‘parentGlyphOrientation’ may be used uninitialized in this function [-Werror=maybe-uninitialized] /home/sujin/workspace/WebKit/Source/WebCore/css/StyleResolver.cpp:2137:28: note: ‘parentGlyphOrientation’ was declared here /home/sujin/workspace/WebKit/Source/WebCore/css/StyleResolver.cpp:2140:5: error: ‘parentFontOrientation’ may be used uninitialized in this function [-Werror=maybe-uninitialized] /home/sujin/workspace/WebKit/Source/WebCore/css/StyleResolver.cpp:2136:21: note: ‘parentFontOrientation’ was declared here In file included from /home/sujin/workspace/WebKit/Source/WebCore/rendering/style/RenderStyle.h:39:0, from /home/sujin/workspace/WebKit/Source/WebCore/css/StyleResolver.h:30, from /home/sujin/workspace/WebKit/Source/WebCore/css/StyleResolver.cpp:30: /home/sujin/workspace/WebKit/Source/WebCore/platform/graphics/FontDescription.h:165:112: error: ‘childGlyphOrientation’ may be used uninitialized in this function [-Werror=maybe-uninitialized] /home/sujin/workspace/WebKit/Source/WebCore/css/StyleResolver.cpp:2133:28: note: ‘childGlyphOrientation’ was declared here In file included from /home/sujin/workspace/WebKit/Source/WebCore/rendering/style/RenderStyle.h:39:0, from /home/sujin/workspace/WebKit/Source/WebCore/css/StyleResolver.h:30, from /home/sujin/workspace/WebKit/Source/WebCore/css/StyleResolver.cpp:30: /home/sujin/workspace/WebKit/Source/WebCore/platform/graphics/FontDescription.h:164:83: error: ‘childFontOrientation’ may be used uninitialized in this function [-Werror=maybe-uninitialized] /home/sujin/workspace/WebKit/Source/WebCore/css/StyleResolver.cpp:2132:21: note: ‘childFontOrientation’ was declared here cc1plus: all warnings being treated as errors make[2]: *** [Source/WebCore/CMakeFiles/webcore_efl.dir/css/StyleResolver.cpp.o] Error 1 make[2]: *** Waiting for unfinished jobs.... make[1]: *** [Source/WebCore/CMakeFiles/webcore_efl.dir/all] Error 2 make: *** [all] Error 2
Attachments
Patch
(1.56 KB, patch)
2012-12-06 07:33 PST
,
Sujin Park
no flags
Details
Formatted Diff
Diff
Patch
(1.56 KB, patch)
2012-12-07 03:53 PST
,
Sujin Park
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Sujin Park
Comment 1
2012-12-06 07:33:01 PST
Created
attachment 178011
[details]
Patch
Sujin Park
Comment 2
2012-12-07 03:53:15 PST
Created
attachment 178193
[details]
Patch
WebKit Review Bot
Comment 3
2012-12-07 06:53:08 PST
Comment on
attachment 178193
[details]
Patch Clearing flags on attachment: 178193 Committed
r136952
: <
http://trac.webkit.org/changeset/136952
>
WebKit Review Bot
Comment 4
2012-12-07 06:53:12 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug