[EFL] Fix build warning in StyleResolver.cpp using gcc 4.7.2 https://bugs.webkit.org/show_bug.cgi?id=104262

Patch by Sujin Park <sujjin.park@gmail.com> on 2012-12-07
Reviewed by Alexis Menard.

EFL port treats build warning as compile error and there are
maybe-uninitialized when building with gcc 4.7.2.
This patch adds default case to resolve a build break.

* css/StyleResolver.cpp:
(WebCore::getFontAndGlyphOrientation):

Canonical link: https://commits.webkit.org/122527@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136952 268f45cc-cd09-0410-ab3c-d52691b4dbfc